# Robot_arm_mover_Gazebo

./: .gitignore  README.md
workspace/catkin_ws/: runRobot.sh
workspace/catkin_ws/src/robot_arm/: CMakeLists.txt  package.xml
workspace/catkin_ws/src/robot_arm/config/: controllers.yaml
workspace/catkin_ws/src/robot_arm/launch/: robot_spawn.launch
workspace/catkin_ws/src/robot_arm/src/: arm_mover.cpp  look_away.cpp  simple_mover.cpp
workspace/catkin_ws/src/robot_arm/urdf/: simple_arm.gazebo.xacro  simple_arm.urdf.xacro
workspace/catkin_ws/src/robot_arm/worlds/: simple_world.world  simple_world2.world
